k8s/features/virtual-service-ab-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-ab
  namespace: service-mesh-demo
spec:
  hosts:
  - recommendations
  http:
    - route:
      - destination:
          host: recommendations
          subset: recommendation-music
          port:
            number: 8080
        weight: 70
      - destination:
          host: recommendations
          subset: recommendation-food
          port:
            number: 8080
        weight: 30
