k8s/features/virtual-service-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-mesh-demo-fault
  namespace: service-mesh-demo
spec:
  hosts:
  - "*"
  gateways:
  - service-mesh-demo-gateway
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 50
    route:
    - destination:
        host: orders
        port:
          number: 8080
